Implementacion de logica inicial de reservas, y correcion en logica mostrar usuarios
